--- a/model/CONFIG.yaml
+++ b/model/CONFIG.yaml
@@ -1,15 +1,16 @@
-model_organization: <the github organization that this model appears>
-model_name: <the name of the github repository (e.g. my-repository)>
-root_schema: <the name of the base schema file (w/o .yaml) (e.g. sample)>
-model_root_class: <name of the base class in the schema for loader testing (e.g. Person)>
+model_organization:    # Name of github individual organization where this cone exists (e.g. linkml / mygithub
+model_name:            # Name of target repository (e.g. my-wonderful-model)
+root_schema: sample_model  # the name of the base schema file (w/o .yaml) 
+model_root_class: Person   # <name of the base class in the schema for testing
 
-model_author: <your name>
-model_author_email: <your email>
-model_synopsis: <one liner about the model>
-model_description: |-
-  <in depth description of the model>
+model_author:              # Your name
+model_author_email:        # Your email
+model_synopsis:  A really nice model     # One liner about the model
+model_description: |-      # Longer description of the model
+  This is a really nice model that
+  does stuff
 
-# Trove Classifiers (https://pypi.org/classifiers/) -- if omitted there are reasonable defaults
+# Trove Classifiers (https://pypi.org/classifiers/) -- these can be omitted if the elemens below are sufficient
 classifiers:
     - "Development Status :: 4 - Beta"
     - "Environment :: Console"
@@ -22,7 +23,7 @@ classifiers:
     - "Programming Language :: Python :: 3.8"
     - "Programming Language :: Python :: 3.9"
 
-# Keywords -- if omitted, there are reasonable defaults
+# Keywords -- these can also be omitted from this file if the below is ok
 keywords: [linkml, LOD, Modeling, Linked open data, model]
 
 # Elements to be generated
